testsuite/poke.pkl/struct-types-diag-10.pk
/* { dg-do compile } */

type Bar =
  struct
  {
    int i;
    void j; /* { dg-error "invalid type" } */
    fun ja = void: {}
  };
